--- a/templates/reverse_proxy.j2
+++ b/templates/reverse_proxy.j2
@@ -10,9 +10,9 @@
     format json
   }
 
-  {% if site['tls_dns'] %}
+  {% if site['tls_dns'] is defined %}
   tls {
-    dns {{ site['tls_dns']['provider'] }} {% if site['tls_dns']['config'] %}{{ site['tls_dns']['config'] }}{% endif %}
+    dns {{ site['tls_dns']['provider'] }} {% if site['tls_dns']['config'] is defined %}{{ site['tls_dns']['config'] }}{% endif %}
   }
   {% endif %}
 
