--- a/templates/reverse_proxy.j2
+++ b/templates/reverse_proxy.j2
@@ -2,7 +2,17 @@
   reverse_proxy {
     to {{ site['destination_url'] }}
 
-{% if site['header_host'] is defined %}    header_up +Host {{ site['header_host'] }}{% endif %} 
+{% if site['headers_up'] is defined %}
+{% for header_up in site['headers_up'] %}
+    header_up {% if header_up['operation'] is defined %}{{ header_up['operation'] }}{% endif %}{{ header_up['field'] }}{% if header_up['value'] is defined %} {{ header_up['value'] }}{% endif %}
+{% endfor %}
+{% endif %}
+
+{% if site['headers_down'] is defined %}
+{% for header_down in site['headers_down'] %}
+    header_down {% if header_down['operation'] is defined %}{{ header_down['operation'] }}{% endif %}{{ header_down['field'] }}{% if header_down['value'] is defined %} {{ header_down['value'] }}{% endif %}
+{% endfor %}
+{% endif %}
   }
 
   log {
