TLS options for redirects

--- a/templates/redirect.j2
+++ b/templates/redirect.j2
@@ -1,4 +1,18 @@
 {{ site['domain_name'] }} {
-  redir {
-    to {{ site['destination_url'] }}{uri}{% if site['permanent'] is defined && site['permanent'] %} permanent{% endif %}
+  redir {{ site['destination_url'] }}{uri}{% if site['permanent'] is defined && site['permanent'] %} permanent{% endif %}
+
+  log {
+    output file /var/log/caddy/{{ site['domain_name'] }}-access.log {
+      roll_size 50MiB
+      roll_keep 5
+      roll_keep_for 168h
+    }
+    format json
+  }
+
+{% if site['tls_dns'] is defined %}
+  tls {
+    dns {{ site['tls_dns']['provider'] }}{% if site['tls_dns']['config'] is defined %} {{ site['tls_dns']['config'] }}{% endif %} 
+  }
+{% endif %}
 }
