- add alias option to reverse_proxy - add rewrite options to reverse_proxy - add compression option, global and local - update documentation

--- a/templates/reverse_proxy.j2
+++ b/templates/reverse_proxy.j2
@@ -1,4 +1,4 @@
-{{ site['domain_name'] }} {
+{{ site['domain_name'] }}{% if site['alias'] is defined %}{% for alias in site['alias'] %}, {{ alias['domain'] }}{% endfor %}{% endif %} {
   reverse_proxy {
     to {{ site['destination_url'] }}
 
@@ -14,6 +14,19 @@
 {% endif %}
 
   }
+
+{# Check for global or local compression option #}
+{% if (compression is defined and compression == true 
+     and not (site.compression is defined and site.compression != true)) 
+     or (site.compression is defined and site.compression == true) %} 
+  encode zstd gzip 
+{% endif %}
+
+{% if site['rewrite'] is defined %}
+{% for rewrite_rule in site['rewrite'] %}
+   rewrite {{ rewrite_rule.rule }}
+{% endfor %}
+{% endif %}
 
   log {
     output file /var/log/caddy/{{ site['domain_name'] }}-access.log {
